# boilerplate

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: FindGtest.cmake  Macros.cmake
project/: CMakeLists.txt  main.cpp
project/module/: CMakeLists.txt
project/test/: CMakeLists.txt
