# Project
# (c) 2017 by Florian Wolz
# All rights reserved.

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE OFF)

SET(PACKAGE_NAME        "project")
SET(PACKAGE_VERSION     "0.0.1-dev")
SET(PACKAGE_STRING      "${PACKAGE_NAME} ${PACKAGE_VERSION}")
SET(PACKAGE_TARNAME     "${PACKAGE_NAME}--${PACKAGE_VERSION}")
SET(PACKAGE_BUGREPORT   "https://github.com/name/project/issues")

PROJECT(${PACKAGE_NAME} C CXX)

# Update the directories
SET(PROJECT_MAIN_DIRECTORY ${PROJECT_SOURCE_DIR})
SET(PROJECT_SOURCE_DIRECTORY "${PROJECT_MAIN_DIRECTORY}/neptune")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../../bin")
SET(CMAKE_MODULE_PATH "${PROJECT_MAIN_DIRECTORY}/cmake")

ADD_COMPILE_OPTIONS(-std=c++1y)

# Enable testing
ENABLE_TESTING()

# Find Google Test and Mockup
FIND_PACKAGE(Gtest REQUIRED)

INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${PROJECT_MAIN_DIRECTORY})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIRECTORY})

# Setup the link libraries
#
# If you want to link projects to the main source file, just append
# the libary path to PROJECT_LINK_LIBRARIES.
SET(PROJECT_LINK_LIBRARIES "")

SET(PROJECT_SOURCES "main.cpp")

ADD_SUBDIRECTORY(project)
